# kekino-api

./: .gitignore  conftest.py  manage.py  pyproject.toml  pytest.ini  requirements.txt  test_similar_movies_selector.py
kekino/: settings.py  urls.py  wsgi.py
movie/: admin.py  models.py  urls.py  utils.py  views.py
movie/management/commands/: load_kpdev_movies.py  load_movies.py
movie/migrations/: 0001_initial.py  0002_alter_kinopoiskmovie_kinopoisk_id.py  0003_alter_kinopoiskmovie_title_en.py
templates/: index.html
