[tool.poetry]
name = "kekino"
version = "0.1.0"
description = ""
authors = ["n1k0din <nik726@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.3"
pytest = "^6.2.5"
pytest-django = "^4.4.0"
python-dotenv = "^0.19.0"
pymongo = {extras = ["srv"], version = "^3.12.0"}
certifi = "^2021.10.8"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
